Closed
Bug 1498079
Opened 7 years ago
Closed 6 years ago
Intermittent browser/base/content/test/performance/browser_preferences_usage.js | dom.ipc.processPrelaunch.delayMs should not be accessed more than X times. - Y <= X - JS frame
Categories
(Firefox :: General, defect, P5)
Firefox
General
Tracking
()
RESOLVED
FIXED
Firefox 66
Tracking | Status | |
---|---|---|
firefox66 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: mconley)
References
Details
(Keywords: intermittent-failure)
Attachments
(1 file)
Filed by: apavel [at] mozilla.com
https://treeherder.mozilla.org/logviewer.html#?job_id=204661905&repo=mozilla-inbound
https://queue.taskcluster.net/v1/task/BUj7dSZwQCaPWSwi5H4RsA/runs/0/artifacts/public/logs/live_backing.log
17:52:12 INFO - TEST-START | dom/tests/browser/browser_largeAllocation_win32.js
17:52:12 INFO - TEST-SKIP | dom/tests/browser/browser_largeAllocation_win32.js | took 0ms
17:52:12 INFO - Running manifest: browser/base/content/test/performance/browser.ini
17:52:12 INFO - The following extra prefs will be set:
17:52:12 INFO - browser.migration.version=9999999
17:52:12 INFO - browser.startup.record=true
17:52:12 INFO - gfx.canvas.willReadFrequently.enable=true
17:52:12 INFO - pk12util: PKCS12 IMPORT SUCCESSFUL
17:52:12 INFO - Increasing default timeout to 90 seconds
17:52:12 INFO - MochitestServer : launching [u'/Users/cltbld/tasks/task_1539218954/build/tests/bin/xpcshell', '-g', '/Users/cltbld/tasks/task_1539218954/build/application/Firefox NightlyDebug.app/Contents/Resources', '-f', '/Users/cltbld/tasks/task_1539218954/build/tests/bin/components/httpd.js', '-e', "const _PROFILE_PATH = '/var/folders/1y/kqh6m_hx7mq4d1cqs1lqcwyc00000w/T/tmpyXtVcD.mozrunner'; const _SERVER_PORT = '8888'; const _SERVER_ADDR = '127.0.0.1'; const _TEST_PREFIX = undefined; const _DISPLAY_RESULTS = false;", '-f', '/Users/cltbld/tasks/task_1539218954/build/tests/mochitest/server.js']
17:52:12 INFO - runtests.py | Server pid: 795
17:52:12 INFO - runtests.py | Websocket server pid: 796
17:52:12 INFO - runtests.py | SSL tunnel pid: 797
17:52:12 INFO - runtests.py | Running with e10s: True
17:52:12 INFO - runtests.py | Running with serviceworker_e10s: False
17:52:12 INFO - runtests.py | Running tests: start.
17:52:34 INFO - TEST-PASS | browser/base/content/test/performance/browser_preferences_usage.js | network.http.fallback-connection-timeout should not be accessed more than 40 times. - 1 <= 40 -
17:52:34 INFO - TEST-PASS | browser/base/content/test/performance/browser_preferences_usage.js | layout.css.prefixes.device-pixel-ratio-webkit should not be accessed more than 40 times. - 1 <= 40 -
17:52:34 INFO - TEST-PASS | browser/base/content/test/performance/browser_preferences_usage.js | Should have checked all whitelist items. Remaining: -
17:52:34 INFO - Leaving test bound startup
17:52:34 INFO - Entering test bound open_10_tabs
17:52:34 INFO - Buffered messages logged at 17:52:34
17:52:34 INFO - network.loadinfo.skip_type_assertion should not be accessed more than 32 times and was accessed 62 times.
17:52:34 INFO - Buffered messages finished
17:52:34 INFO - TEST-UNEXPECTED-FAIL | browser/base/content/test/performance/browser_preferences_usage.js | dom.ipc.processPrelaunch.delayMs should not be accessed more than 32 times. - 35 <= 32 - JS frame :: chrome://mochitests/content/browser/browser/base/content/test/performance/browser_preferences_usage.js :: checkPrefGetters :: line 36
17:52:34 INFO - Stack trace:
17:52:34 INFO - chrome://mochitests/content/browser/browser/base/content/test/performance/browser_preferences_usage.js:checkPrefGetters:36
17:52:34 INFO - chrome://mochitests/content/browser/browser/base/content/test/performance/browser_preferences_usage.js:open_10_tabs:180
17:52:34 INFO - chrome://mochikit/content/browser-test.js:Tester_execTest/<:1093
17:52:34 INFO - chrome://mochikit/content/browser-test.js:Tester_execTest:1084
17:52:34 INFO - chrome://mochikit/content/browser-test.js:nextTest/<:986
17:52:34 INFO - chrome://mochikit/content/tests/SimpleTest/SimpleTest.js:SimpleTest.waitForFocus/waitForFocusInner/focusedOrLoaded/<:795
17:52:34 INFO - TEST-PASS | browser/base/content/test/performance/browser_preferences_usage.js | Whitelist item layout.css.dpi should be accessed at most 35 times. - 30 <= 35 -
17:52:34 INFO - TEST-PASS | browser/base/content/test/performance/browser_preferences_usage.js | Whitelist item browser.tabs.remote.logSwitchTiming should be accessed at most 25 times. - 20 <= 25 -
17:52:34 INFO - TEST-PASS | browser/base/content/test/performance/browser_preferences_usage.js | Whitelist item browser.zoom.full should be accessed at least 10 times. - 10 <= 19 -
17:52:34 INFO - TEST-PASS | browser/base/content/test/performance/browser_preferences_usage.js | Whitelist item browser.zoom.full should be accessed at most 25 times. - 19 <= 25 -
17:52:34 INFO - TEST-PASS | browser/base/content/test/performance/browser_preferences_usage.js | Whitelist item browser.startup.record should be accessed at most 20 times. - 14 <= 20 -
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Updated•7 years ago
|
Summary: Intermittent browser/base/content/test/performance/browser_preferences_usage.js | dom.ipc.processPrelaunch.delayMs should not be accessed more than 32 times. - 35 <= 32 - JS frame → Intermittent browser/base/content/test/performance/browser_preferences_usage.js | dom.ipc.processPrelaunch.delayMs should not be accessed more than X times. - Y <= X - JS frame
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment 8•7 years ago
|
||
There are 27 failures failures in the last week.
Recent failure log: https://treeherder.mozilla.org/logviewer.html#?job_id=213666052&repo=autoland&lineNumber=1252
03:46:23 INFO - TEST-PASS | browser/base/content/test/performance/browser_preferences_usage.js | layout.css.prefixes.device-pixel-ratio-webkit should not be accessed more than 40 times. - 1 <= 40 -
03:46:23 INFO - TEST-PASS | browser/base/content/test/performance/browser_preferences_usage.js | Should have checked all whitelist items. Remaining: -
03:46:23 INFO - Leaving test bound startup
03:46:23 INFO - Entering test bound open_10_tabs
03:46:23 INFO - Buffered messages logged at 03:46:23
03:46:23 INFO - network.loadinfo.skip_type_assertion should not be accessed more than 32 times and was accessed 73 times.
03:46:23 INFO - Buffered messages finished
03:46:23 INFO - TEST-UNEXPECTED-FAIL | browser/base/content/test/performance/browser_preferences_usage.js | dom.ipc.processPrelaunch.delayMs should not be accessed more than 32 times. - 33 <= 32 - JS frame :: chrome://mochitests/content/browser/browser/base/content/test/performance/browser_preferences_usage.js :: checkPrefGetters :: line 36
03:46:23 INFO - Stack trace:
03:46:23 INFO - chrome://mochitests/content/browser/browser/base/content/test/performance/browser_preferences_usage.js:checkPrefGetters:36
03:46:23 INFO - chrome://mochitests/content/browser/browser/base/content/test/performance/browser_preferences_usage.js:open_10_tabs:159
03:46:23 INFO - chrome://mochikit/content/browser-test.js:Tester_execTest/<:1093
03:46:23 INFO - chrome://mochikit/content/browser-test.js:Tester_execTest:1084
03:46:23 INFO - chrome://mochikit/content/browser-test.js:nextTest/<:982
03:46:23 INFO - chrome://mochikit/content/tests/SimpleTest/SimpleTest.js:SimpleTest.waitForFocus/waitForFocusInner/focusedOrLoaded/<:803
03:46:23 INFO - TEST-PASS | browser/base/content/test/performance/browser_preferences_usage.js | Whitelist item layout.css.dpi should be accessed at most 35 times. - 31 <= 35 -
Justin can you take a look or assign someone?
Flags: needinfo?(dolske)
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment 13•6 years ago
|
||
Declaring new-year needinfo bankruptcy.
But over to mconley to see if he cares to consider prioritizing.
Flags: needinfo?(dolske) → needinfo?(mconley)
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 15•6 years ago
|
||
Assignee | ||
Comment 16•6 years ago
|
||
This should allow us to avoid accessing this pref too many times during start-up.
Assignee | ||
Updated•6 years ago
|
Assignee: nobody → mconley
Flags: needinfo?(mconley)
Comment 17•6 years ago
|
||
Pushed by mconley@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4dfee3ce7d5e
Use a var cache for the PreallocatedProcessManager delay pref. r=jld
Comment 18•6 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox66:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 66
You need to log in
before you can comment on or make changes to this bug.
Description
•