Bug 1498079 - Use a var cache for the PreallocatedProcessManager delay pref. r=jld

This should allow us to avoid accessing this pref too many times during start-up.

Differential Revision: https://phabricator.services.mozilla.com/D16584